tests/types/errors/assign_dict_value_str_to_bool.expr
Dict<str, bool> flags = {"ready": "yes"};
